--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@vue/tsconfig": "^0.1.3",
     "cypress": "^12.0.2",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.22.0",
+    "eslint": "^8.32.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^20.0.3",
@@ -39,6 +39,7 @@
     "start-server-and-test": "^1.15.2",
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
+    "vite-plugin-eslint": "^1.8.1",
     "vitest": "^0.25.6",
     "vue-tsc": "^1.0.12"
   }
