--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.6",
     "start-server-and-test": "^1.15.4",
+    "tailwindcss": "^3.2.7",
     "typescript": "~5.0.2",
     "vite": "^4.2.1",
     "vite-plugin-eslint": "^1.8.1",
