--- a/package.json
+++ b/package.json
@@ -14,34 +14,35 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
-    "pinia": "^2.0.33",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "pinia": "^2.1.6",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.2.0",
+    "@rushstack/eslint-patch": "^1.3.2",
+    "@tsconfig/node20": "^20.1.0",
     "@types/jsdom": "^21.1.1",
-    "@types/node": "^18.15.5",
-    "@vitejs/plugin-vue": "^4.1.0",
+    "@types/node": "^20.4.5",
+    "@vitejs/plugin-vue": "^4.2.3",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
-    "@vue/eslint-config-prettier": "^7.1.0",
-    "@vue/eslint-config-typescript": "^11.0.2",
-    "@vue/test-utils": "^2.3.2",
-    "@vue/tsconfig": "^0.1.3",
-    "cypress": "^12.8.1",
+    "@vue/eslint-config-prettier": "^8.0.0",
+    "@vue/eslint-config-typescript": "^11.0.3",
+    "@vue/test-utils": "^2.4.1",
+    "@vue/tsconfig": "^0.4.0",
+    "cypress": "^12.17.3",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.36.0",
-    "eslint-plugin-cypress": "^2.12.1",
-    "eslint-plugin-vue": "^9.10.0",
-    "jsdom": "^21.1.1",
+    "eslint": "^8.46.0",
+    "eslint-plugin-cypress": "^2.13.3",
+    "eslint-plugin-vue": "^9.16.1",
+    "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.8.6",
-    "start-server-and-test": "^1.15.4",
-    "tailwindcss": "^3.2.7",
-    "typescript": "~5.0.2",
-    "vite": "^4.2.1",
+    "prettier": "^3.0.0",
+    "start-server-and-test": "^2.0.0",
+    "tailwindcss": "^3.3.3",
+    "typescript": "~5.1.6",
+    "vite": "^4.4.8",
     "vite-plugin-eslint": "^1.8.1",
-    "vitest": "^0.29.7",
-    "vue-tsc": "^1.2.0"
+    "vitest": "^0.34.1",
+    "vue-tsc": "^1.8.8"
   }
 }
