--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.1",
     "@vue/tsconfig": "^0.4.0",
+    "autoprefixer": "^10.4.14",
     "cypress": "^12.17.3",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.46.0",
@@ -36,6 +37,7 @@
     "eslint-plugin-vue": "^9.16.1",
     "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "start-server-and-test": "^2.0.0",
     "tailwindcss": "^3.3.3",
