--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@intlify/unplugin-vue-i18n": "^0.12.2",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
