--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,6 +7,8 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    // https://github.com/intlify/bundle-tools/tree/main/packages/unplugin-vue-i18n
+    "types": ["@intlify/unplugin-vue-i18n/messages"]
   }
 }
