--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.27",
     "prettier": "^3.0.1",
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "start-server-and-test": "^2.0.0",
     "tailwindcss": "^3.3.3",
     "typescript": "~5.1.6",
