--- a/package.json
+++ b/package.json
@@ -11,43 +11,47 @@
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' :4173 'cypress open --e2e'",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "@intlify/unplugin-vue-i18n": "^0.12.2",
+    "@intlify/unplugin-vue-i18n": "^0.13.0",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
     "@rushstack/eslint-patch": "^1.3.3",
-    "@tsconfig/node20": "^20.1.1",
-    "@types/jsdom": "^21.1.1",
-    "@types/node": "^20.5.0",
-    "@vitejs/plugin-vue": "^4.2.3",
-    "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "@tsconfig/node20": "^20.1.2",
+    "@types/jsdom": "^21.1.2",
+    "@types/node": "^20.5.7",
+    "@vitejs/plugin-vue": "^4.3.4",
+    "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.1",
     "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.15",
-    "cypress": "^12.17.4",
+    "cypress": "^13.0.0",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.47.0",
+    "eslint": "^8.48.0",
     "eslint-plugin-cypress": "^2.14.0",
     "eslint-plugin-vue": "^9.17.0",
+    "husky": "^8.0.0",
     "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.28",
-    "prettier": "^3.0.2",
+    "postcss": "^8.4.29",
+    "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.3",
     "start-server-and-test": "^2.0.0",
     "tailwindcss": "^3.3.3",
-    "typescript": "~5.1.6",
+    "typescript": "~5.2.2",
     "vite": "^4.4.9",
     "vite-plugin-eslint": "^1.8.1",
-    "vitest": "^0.34.1",
+    "vitest": "^0.34.3",
     "vue-tsc": "^1.8.8"
   }
 }
