--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@intlify/unplugin-vue-i18n": "^0.13.0",
+    "msw": "^1.2.5",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
@@ -54,5 +55,8 @@
     "vite-plugin-eslint": "^1.8.1",
     "vitest": "^0.34.3",
     "vue-tsc": "^1.8.8"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
